--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,44 @@
 
   <div class="container">
     <div ng-view></div>
+
+    <div class="row">
+        <div class="col-md-4">
+          <h4>Please Login</h4>
+          <button type="button" class="btn btn-default">Login</button>
+          <br>
+          <br>
+          <br>
+          <div class="well">
+            <h4>User Info</h4>
+            <ul>
+              <li>ID: Some Id</li>
+              <li>First Name: John</li>
+              <li>Last Name: Doe</li>
+              <li>Email: john@johndoe.com</li>
+              <li>Gender: Male</li>
+              <li>Locale: enGB</li>
+            </ul>
+          </div>
+          <br />
+          <div class="well">
+            <h4>Permission</h4>
+            <ul>
+              <li></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-8">
+          <h3>Welcome to Facebook</h3>
+          <form>
+            <div class="form-group">
+              <label>Status Update</label>
+              <textarea class="form-control"></textarea>
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
+        </div>
+    </div>
   </div>
 
 
