--- a/app/facebook/facebook.html
+++ b/app/facebook/facebook.html
@@ -34,21 +34,23 @@
     </div>
     <div class="col-md-8">
       <h3>Welcome to Facebook</h3>
-      <form>
+      <form ng-submit="postStatus()">
         <div class="form-group">
           <label>Status Update</label>
-          <textarea class="form-control"></textarea>
+          <textarea class="form-control" ng-model="myPost"></textarea>
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default" >Submit</button>
       </form>
       <br />
       <br />
-      <div ng-repeat="post in posts">
-        <div class="stimg">
-          <img ng-src="{{picture}}"
+      <div ng-repeat="post in posts" class="stbody">
+        <div class="well row">
+          <blockquote>
+            <img ng-src="{{picture}}" />
+            <p>{{post.message}} {{post.image}}</p>
+            <small> <cite title="Source Title">{{post.updated_time}}</cite></small>
+          </blockquote>
         </div>
-        <div class="sttext">{{post.message}}</div>
-        <div class="sttime">{{post.updated_time}}</div>
       </div>
     </div>
   </div>
